--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
     <p>WebApp(MEAN)
     </p>
     <!-- Live reload script -->
-    <script type="text/javascript" src=""></script>
+    <script type="text/javascript" src="/myjs/todo.js"></script>
 </body>
 
 </html>
